--- a/css/producto_css.css
+++ b/css/producto_css.css
@@ -88,7 +88,7 @@ header {
     border-radius: 1rem;
 }
 .producto-img {
-    width: 10rem;
+    /*width: 10rem;*/
 }
 .producto-title {
     font-size: clamp(15px, 3vw, 27px);
@@ -134,19 +134,20 @@ header {
     margin-bottom: 4rem;
 }
 .productos-column-3 {
-    grid-template-columns: repeat(3, auto);
-    gap: 3.6rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
+    gap: 3.5rem;
 }
 .img-producto img {
     width: 120px;
     position: relative;
 }
-.item-producto {
+.item-producto {    
     background-color: black;
     border-radius: 1rem;
-    padding: 3rem;
+    padding: 2rem;
     gap: 1.3rem;
-    width: 12rem;
+    width: 200px;
+    height: 500px;
 }
 .text-producto {
     font-size: clamp(15px, 3vw, 22px);
@@ -192,12 +193,13 @@ header {
     color: rgb(44, 43, 43)
 }
 
+
 /*--------------  FOOTER -----------------*/
 .flex-2 {
     flex-direction: column;
 }
 .flex-2 h2 {
-    font-size: clamp(15px, 3vw, 22px);
+    font-size: clamp(20px, 3vw, 22px);
     margin-top: 1rem;
     margin-bottom: 2.3rem;
 }
@@ -215,16 +217,17 @@ header {
     height: 100%;
 }
 .title-footer {
-    font-size: clamp(15px, 3vw, 30px);
+    font-size: clamp(20px, 3vw, 30px);
     color: white;
     text-transform: uppercase;
-    margin-bottom: 2rem;
 }
 .text-footer {
     font-size: clamp(10px, 3vw, 22px);
     color: white;
     text-align: justify;
-    margin-bottom: 2rem;
+}
+.footer-flex {
+    gap: 2rem;
 }
 .footer-column-2 {
     grid-template-columns: 470px 350px;
@@ -278,14 +281,14 @@ header {
     padding: 1rem;
 }
 .title-telefono div > p {
-    font-size: clamp(10px, 3vw, 18px);
+    font-size: clamp(15px, 3vw, 20px);
 }
 .title-email {
     gap: 2.1rem;
     padding: 1rem;
 }
 .title-email div > p {
-    font-size: clamp(10px, 3vw, 18px);
+    font-size: clamp(15px, 3vw, 20px);
 }
 .social-media {
     padding: 1rem;
@@ -299,6 +302,9 @@ header {
 .gap-footer-3 {
     gap: 1.7rem;
 }
+.gap-footer-3 a {
+    font-size: clamp(15px, 3vw, 17x);
+}
 .social {
     color: white;
     background-color: black;
@@ -306,4 +312,61 @@ header {
     width: 45px;
     height: 45px;
     border-radius: 100%;
+}
+
+
+@media (0px < width < 1012px) {
+    /*-------------- VER PRODUCTO --------------*/ 
+    .ver-producto {
+        padding-inline: 5rem;
+    }
+    .ver-producto article {
+        width: 600px;
+    }
+    .ver-producto-column-2 {
+        grid-template-columns: repeat(1, auto);
+    }
+
+    /*-------------- FOOTER --------------*/ 
+    .footer-column-2 {
+        grid-template-columns: repeat(1, auto);
+    }
+    .img-footer {
+        display: none;
+    }
+    .my-footer {
+        background-color: white;
+        border-radius: 0;
+        padding: 0;
+        /* width: 63rem; */
+        height: 100%;
+    }
+    .footer-flex {
+        background-color: black;
+        border-radius: 15px;
+        padding: 3rem;
+        width: 600px;
+    }
+    .center-text-footer {
+        text-align: center;
+    }
+    .center-footer {
+        display: grid;
+        place-content: center;
+    }
+
+    .footer-column-2-2 {
+        grid-column:inherit;
+        grid-template-columns: repeat(1, auto);
+        gap: 4rem;
+    }
+    .footer-column-3 {
+        grid-template-columns: repeat(3, auto);
+        gap: 3rem;
+    }
+    .my-footer2 {
+        flex-direction: column-reverse;
+        padding-top: 4rem;
+        padding-inline: 3.6rem;
+    }
 }
