--- a/css/producto_css.css
+++ b/css/producto_css.css
@@ -135,7 +135,7 @@ header {
 }
 .productos-column-3 {
     grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
-    gap: 3.5rem;
+    gap: 2.5rem;
 }
 .img-producto img {
     width: 120px;
@@ -146,7 +146,6 @@ header {
     border-radius: 1rem;
     padding: 2rem;
     gap: 1.3rem;
-    width: 200px;
     height: 500px;
 }
 .text-producto {
@@ -280,14 +279,14 @@ header {
     gap: 2.1rem;
     padding: 1rem;
 }
-.title-telefono div > p {
+.title-telefono div > a {
     font-size: clamp(15px, 3vw, 20px);
 }
 .title-email {
     gap: 2.1rem;
     padding: 1rem;
 }
-.title-email div > p {
+.title-email div > a {
     font-size: clamp(15px, 3vw, 20px);
 }
 .social-media {
