--- a/css/css.css
+++ b/css/css.css
@@ -7,10 +7,10 @@
 body {
     font-family: "Gidole", sans-serif;
 }
-body {
-    /* background-image: url(https://thumbs.dreamstime.com/b/modelo-de-la-producci%C3%B3n-cerveza-incons%C3%BAtil-120824598.jpg); */
-    /* background-attachment: fixed; */
-}
+/* body {
+    background-image: url(https://thumbs.dreamstime.com/b/modelo-de-la-producci%C3%B3n-cerveza-incons%C3%BAtil-120824598.jpg);
+    background-attachment: fixed;
+} */
 a {
     text-decoration: none;
     color: black;
