--- a/css/css.css
+++ b/css/css.css
@@ -56,7 +56,7 @@ header {
     flex-direction: row-reverse;
 }
 .navegation ul > li > a {
-    font-size: clamp(15px, 3vw, 17px);
+    font-size: clamp(16px, 3vw, 17px);
     text-transform: uppercase;
 }
 .gap5rem {
@@ -66,6 +66,9 @@ header {
     display: none;
 }
 .burger-icon {
+    display: none;
+}
+.logo-burger {
     display: none;
 }
 
@@ -357,16 +360,19 @@ header {
     .navegation > ul {
         position: fixed;
         background-color: black;
-        top: 5.09rem;
-        padding: 3rem;
+        top: 0;
+        padding: 1rem;
         width: 50%;
         max-width: 300px;
         height: 100vh;
-        right: -100%;
-        transition: all .3s ease-in-out;
+        left: -100%;
+        transition: all .5s ease-in-out;
     }
     #burgercheck:checked ~ ul  {
-        right: 0;
+        left: 0;
+    }
+    .navegation ul .burger-center{
+        padding-left: 1rem;
     }
     .navegation ul li > a {
         color: white;
@@ -377,6 +383,23 @@ header {
     .center-nav {
         display: flex;
         place-content: center;
+    }
+    .logo-burger {
+        display: inline-block;
+    }
+    .logo-burger-img img {
+        width: 7rem;
+    }
+    .logo-burger-text {
+        font-size: clamp(10px, 3vw, 19px);
+    }
+    .gap5rem {
+        gap: 3rem;
+    }
+    .burger-center {
+        display: flex;
+        justify-content: left;
+        align-items: center;
     }
 
     /*-------------- CATEGORIAS --------------*/
@@ -467,16 +490,19 @@ header {
     .navegation > ul {
         position: fixed;
         background-color: black;
-        top: 5.09rem;
-        padding: 3rem;
+        top: 0;
+        padding: 1rem;
         width: 50%;
         max-width: 300px;
         height: 100vh;
         right: -100%;
-        transition: all .3s ease-in-out;
+        transition: all .5s ease-in-out;
     }
     #burgercheck:checked ~ ul  {
         right: 0;
+    }
+    .navegation ul .burger-center{
+        padding-left: 1rem;
     }
     .navegation ul li > a {
         color: white;
@@ -487,6 +513,23 @@ header {
     .center-nav {
         display: flex;
         place-content: center;
+    }
+    .logo-burger {
+        display: inline-block;
+    }
+    .logo-burger-img img {
+        width: 7rem;
+    }
+    .logo-burger-text {
+        font-size: clamp(10px, 3vw, 19px);
+    }
+    .gap5rem {
+        gap: 3rem;
+    }
+    .burger-center {
+        display: flex;
+        justify-content: left;
+        align-items: center;
     }
 
     /*-------------- CATEGORIAS --------------*/ 
@@ -583,13 +626,13 @@ header {
     .navegation > ul {
         position: fixed;
         background-color: black;
-        top: 5.09rem;
-        padding: 3rem;
+        top: 0;
+        padding: 1rem;
         width: 50%;
         max-width: 300px;
         height: 100vh;
         right: -100%;
-        transition: all .3s ease-in-out;
+        transition: all .5s ease-in-out;
     }
     #burgercheck:checked ~ ul  {
         right: 0;
@@ -597,6 +640,9 @@ header {
     .navegation ul li > a {
         color: white;
     } 
+    .navegation ul .burger-center{
+        padding-left: 1rem;
+    }
     .flex-row-2 {
         flex-direction: column;
     }
@@ -604,6 +650,24 @@ header {
         display: flex;
         place-content: center;
     }
+    .logo-burger {
+        display: inline-block;
+    }
+    .logo-burger-img img {
+        width: 7rem;
+    }
+    .logo-burger-text {
+        font-size: clamp(10px, 3vw, 19px);
+    }
+    .gap5rem {
+        gap: 3rem;
+    }
+    .burger-center {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+    }
+
 
     /*-------------- CATEGORIAS --------------*/ 
     .categorias {
