--- a/css/producto_css.css
+++ b/css/producto_css.css
@@ -24,7 +24,10 @@ header {
     /* top: 0px; */
     /* position: sticky; */
     /* z-index: 2; */
-    background-color: white;
+    background-color: #d69942;
+}
+h1 {
+    color: #4E2414;
 }
 
 .grid {
@@ -58,6 +61,12 @@ header {
 .navegation ul > li > a {
     font-size: clamp(16px, 3vw, 17px);
     text-transform: uppercase;
+    color: #4E2A14;
+    font-weight: 600;
+    transition: all .3s ease-in-out;
+}
+.navegation ul > li a:hover {
+    color: white;
 }
 .gap5rem {
     gap: 5rem
@@ -67,6 +76,7 @@ header {
 }
 .burger-icon {
     display: none;
+    color: #4E2A14;
 }
 .logo-burger {
     display: none;
@@ -88,7 +98,7 @@ header {
     gap: 4rem;
 }
 .producto-img {
-    background-color: rgb(77, 76, 76);
+    background-color: #4E2414;
     padding: 5rem;
     border-radius: 1rem;
 }
@@ -138,7 +148,7 @@ header {
 /*-------------- PRODUCTOS -----------------*/
 .productos {
     padding-block: 5rem;
-    background-color: #D9D9D9;
+    background-color: #47704c;
 }
 .productos section {
     margin-bottom: 4rem;
@@ -152,7 +162,7 @@ header {
     position: relative;
 }
 .item-producto {    
-    background-color: black;
+    background-color: #e2a046;
     border-radius: 1rem;
     padding: 2rem;
     gap: 1.3rem;
@@ -161,16 +171,18 @@ header {
 .text-producto {
     font-size: clamp(20px, 3vw, 22px);
     text-transform: uppercase;
+    color: #3b2e1e;
+    font-weight: 680;
 }
 .description {
     font-size: clamp(15px, 3vw, 16px);
     text-align: center;
+    color: #4E2A14;
 }
 .text-producto, .description {
-    color: white;
 }
 .precio {
-    background-color: #F82020;
+    background-color: #c23d2a;
     color: white;
     font-size: clamp(15px, 3vw, 28px);
     width: 20px;
@@ -181,7 +193,7 @@ header {
 }
 .button-producto button {
     color: white;
-    background-color: #F82020;
+    background-color: #c23d2a;
     text-transform: uppercase;
     padding: 1rem 2rem 1rem 2rem;
     border-radius: 4rem;
@@ -196,12 +208,12 @@ header {
     font-size: clamp(30px, 3vw, 40px);
     text-transform: uppercase;
     margin-bottom: 1rem;
+    color: #fdf5e6
 }
 .text-section {
     font-size: clamp(10px, 3vw, 20px);
-    color: rgb(44, 43, 43)
+    color: #fdf5e6;
 }
-
 
 /*--------------  FOOTER -----------------*/
 .flex-2 {
@@ -219,7 +231,7 @@ header {
     padding: 5rem;
 }
 .my-footer {
-    background-color: black;
+    background-color: #4E2A14;
     border-radius: 15px;
     padding-inline: 3.2rem;
     padding-block: 2.5rem;
@@ -245,8 +257,8 @@ header {
 }
 .button-footer button {
     font-size: clamp(10px, 3vw, 20px);
-    background-color: #D9D9D9;
-    color: black;
+    background-color: #D8A03C;
+    color: white;
     padding-block: .8rem;
     padding-inline: 3rem;
     border-radius: 5rem;
@@ -255,9 +267,8 @@ header {
 }
 .button-footer button:hover {
     cursor: pointer;
-    background-color: black;
-    box-shadow: 1px 1px 6px white;
-    color: #D9D9D9
+    background-color: #B8791F;
+    /* box-shadow: 1px 1px 6px white; */
 }
 .img-footer {
     position: relative;
@@ -282,6 +293,7 @@ header {
 }
 .fa-phone, .fa-envelope {
     font-size: clamp(27px, 3vw, 30px);
+    color: #4E2A14;
 }
 .text-logo {
     font-size: clamp(15px, 3vw, 22px);
@@ -317,7 +329,7 @@ header {
 }
 .social {
     color: white;
-    background-color: black;
+    background-color: #4E2414;
     font-size: 18px;
     width: 45px;
     height: 45px;
@@ -359,14 +371,14 @@ header {
         display: none;
     }
     .my-footer {
-        background-color: white;
+        background-color: #4E2414;
         border-radius: 0;
         padding: 0;
         /* width: 63rem; */
         height: 100%;
     }
     .footer-flex {
-        background-color: black;
+        background-color: #4E2414;
         border-radius: 15px;
         padding: 3rem;
     }
@@ -487,7 +499,7 @@ header {
         height: 100%;
     }
     .footer-flex {
-        background-color: black;
+        background-color: #4E2A14;
         border-radius: 15px;
         padding: 3rem;
     }
@@ -612,7 +624,7 @@ header {
         height: 100%;
     }
     .footer-flex {
-        background-color: black;
+        background-color: #4E2414;
         border-radius: 15px;
         padding: 3rem;
     }
@@ -766,7 +778,7 @@ header {
         height: 100%;
     }
     .footer-flex {
-        background-color: black;
+        background-color: #4E2A14;
         border-radius: 15px;
         padding: 3rem;
         width: 200px;
