--- a/css/producto_css.css
+++ b/css/producto_css.css
@@ -24,7 +24,7 @@ header {
     /* top: 0px; */
     /* position: sticky; */
     /* z-index: 2; */
-    background-color: #d69942;
+    background-color: #f4e493;
 }
 h1 {
     color: #4E2414;
@@ -61,8 +61,7 @@ h1 {
 .navegation ul > li > a {
     font-size: clamp(16px, 3vw, 17px);
     text-transform: uppercase;
-    color: #4E2A14;
-    font-weight: 600;
+    color: #401e08;
     transition: all .3s ease-in-out;
 }
 .navegation ul > li a:hover {
@@ -81,6 +80,9 @@ h1 {
 .logo-burger {
     display: none;
 }
+.title-logo div > h1 {
+    color: #401e08;
+}
 
 /*--------------  VER PRODUCTO -----------------*/
 .ver-producto {
@@ -98,9 +100,13 @@ h1 {
     gap: 4rem;
 }
 .producto-img {
-    background-color: #4E2414;
+    background-color: #efd15a;
     padding: 5rem;
     border-radius: 1rem;
+}
+.producto-img img {
+    width: 150px;
+    height: 400px;
 }
 .producto-title {
     font-size: clamp(23px, 3vw, 27px);
@@ -148,7 +154,7 @@ h1 {
 /*-------------- PRODUCTOS -----------------*/
 .productos {
     padding-block: 5rem;
-    background-color: #47704c;
+    background-color: #D8A03C;
 }
 .productos section {
     margin-bottom: 4rem;
@@ -162,7 +168,7 @@ h1 {
     position: relative;
 }
 .item-producto {    
-    background-color: #e2a046;
+    background-color: #efd15a;
     border-radius: 1rem;
     padding: 2rem;
     gap: 1.3rem;
@@ -171,19 +177,17 @@ h1 {
 .text-producto {
     font-size: clamp(20px, 3vw, 22px);
     text-transform: uppercase;
-    color: #3b2e1e;
+    color: #401e08;
     font-weight: 680;
 }
 .description {
     font-size: clamp(15px, 3vw, 16px);
     text-align: center;
-    color: #4E2A14;
-}
-.text-producto, .description {
+    color: #401e08;
 }
 .precio {
-    background-color: #c23d2a;
-    color: white;
+    background-color: #e39f1d;
+    color: #401e08;
     font-size: clamp(15px, 3vw, 28px);
     width: 20px;
     position: absolute;
@@ -192,8 +196,9 @@ h1 {
     border-radius: 100%;
 }
 .button-producto button {
-    color: white;
-    background-color: #c23d2a;
+    color: #401e08;
+    background-color: #f4e493;
+    border: 1.8px solid #ebbe34;
     text-transform: uppercase;
     padding: 1rem 2rem 1rem 2rem;
     border-radius: 4rem;
@@ -201,18 +206,18 @@ h1 {
 }
 .button-producto button:hover {
     cursor: pointer;
-    background-color: white;
-    color: #F82020;
+    color: white;
+    background-color: #c97c16;
 }
 .title-section {
     font-size: clamp(30px, 3vw, 40px);
     text-transform: uppercase;
     margin-bottom: 1rem;
-    color: #fdf5e6
+    color: #401e08;
 }
 .text-section {
     font-size: clamp(10px, 3vw, 20px);
-    color: #fdf5e6;
+    color: #401e08;
 }
 
 /*--------------  FOOTER -----------------*/
@@ -221,11 +226,13 @@ h1 {
 }
 .flex-2 h2 {
     font-size: clamp(20px, 3vw, 22px);
+    color: #401e08;
     margin-top: 1rem;
     margin-bottom: 2.3rem;
 }
 .flex-2 > a {
     text-transform: uppercase;
+    color: #401e08;
 }
 .footer {
     padding: 5rem;
@@ -257,8 +264,8 @@ h1 {
 }
 .button-footer button {
     font-size: clamp(10px, 3vw, 20px);
-    background-color: #D8A03C;
-    color: white;
+    background-color: #f4e493;
+    color: #401e08;
     padding-block: .8rem;
     padding-inline: 3rem;
     border-radius: 5rem;
@@ -267,7 +274,7 @@ h1 {
 }
 .button-footer button:hover {
     cursor: pointer;
-    background-color: #B8791F;
+    background-color: #efd15a;
     /* box-shadow: 1px 1px 6px white; */
 }
 .img-footer {
@@ -297,10 +304,12 @@ h1 {
 }
 .text-logo {
     font-size: clamp(15px, 3vw, 22px);
+    color: #401e08;
 }
 .title-telefono {
     gap: 2.1rem;
     padding: 1rem;
+    color: #401e08;
 }
 .title-telefono div > a {
     font-size: clamp(15px, 3vw, 20px);
@@ -308,6 +317,7 @@ h1 {
 .title-email {
     gap: 2.1rem;
     padding: 1rem;
+    color: #401e08;
 }
 .title-email div > a {
     font-size: clamp(15px, 3vw, 20px);
@@ -328,8 +338,8 @@ h1 {
     font-size: clamp(15px, 3vw, 17x);
 }
 .social {
-    color: white;
-    background-color: #4E2414;
+    color: #401e08;
+    background-color: #efd15a;
     font-size: 18px;
     width: 45px;
     height: 45px;
@@ -338,12 +348,15 @@ h1 {
 }
 .social-f:hover {
     background-color: #3b5998;
+    color: #fdfbed;
 }
 .social-i:hover {
     background: #C13584;
+    color: #fdfbed;
 }
 .social-w:hover {
     background-color: #25d366;
+    color: #fdfbed;
 }
 
 @media (min-width: 1013px) {
