--- a/css/css.css
+++ b/css/css.css
@@ -24,10 +24,10 @@ header {
     /* top: 0px; */
     /* position: sticky; */
     /* z-index: 2; */
-    background-color: #d69942;
+    background-color: #f4e493;
 }
 h1 {
-    color: #4E2A14;
+    color: white;
 }
 
 .grid {
@@ -61,12 +61,8 @@ h1 {
 .navegation ul > li > a {
     font-size: clamp(16px, 3vw, 17px);
     text-transform: uppercase;
-    color: #4E2A14;
-    font-weight: 600;
+    color: #401e08;
     transition: all .3s ease-in-out;
-}
-.navegation ul > li a:hover {
-    color: white;
 }
 .gap5rem {
     gap: 5rem
@@ -76,10 +72,13 @@ h1 {
 }
 .burger-icon {
     display: none;
-    color: #4E2A14;
+    color: #401e08;
 }
 .logo-burger {
     display: none;
+}
+.title-logo div > h1 {
+    color: #401e08;
 }
 
 /*--------------  BANNER -----------------*/
@@ -93,7 +92,7 @@ h1 {
 /*--------------  CATEGORIAS -----------------*/
 .categorias {
     padding-block: 5rem;
-    background-color: #e2a046;
+    background-color: #884618;
 }
 .item-img img {
     /* height: 100%; */
@@ -116,7 +115,7 @@ h1 {
 /*--------------  PRODUCTOS -----------------*/
 .productos {
     padding-block: 5rem;
-    background-color: #47704c;
+    background-color: #D8A03C;
 }
 .productos section {
     margin-bottom: 4rem;
@@ -130,7 +129,7 @@ h1 {
     position: relative;
 }
 .item-producto {    
-    background-color: #e2a046;
+    background-color: #efd15a;
     border-radius: 1rem;
     padding: 2rem;
     gap: 1.3rem;
@@ -139,19 +138,17 @@ h1 {
 .text-producto {
     font-size: clamp(20px, 3vw, 22px);
     text-transform: uppercase;
-    color: #3b2e1e;
+    color: #401e08;
     font-weight: 680;
 }
 .description {
-    font-size: clamp(15px, 3vw, 15px);
+    font-size: clamp(15px, 3vw, 16px);
     text-align: center;
-    color: #4E2A14;
-}
-.text-producto, .description {
+    color: #401e08;
 }
 .precio {
-    background-color: #c23d2a;
-    color: white;
+    background-color: #e39f1d;
+    color: #401e08;
     font-size: clamp(15px, 3vw, 28px);
     width: 20px;
     position: absolute;
@@ -160,27 +157,28 @@ h1 {
     border-radius: 100%;
 }
 .button-producto button {
-    color: white;
-    background-color: #c23d2a;
+    color: #401e08 ;
+    background-color: #f4e493;
+    border: 1.8px solid #ebbe34;
     text-transform: uppercase;
     padding: 1rem 2rem 1rem 2rem;
     border-radius: 4rem;
-    transition: all .5s;
+    transition: all .3s ease-in-out;
 }
 .button-producto button:hover {
     cursor: pointer;
-    background-color: white;
-    color: #F82020;
+    color: white;
+    background-color: #c97c16;
 }
 .title-section {
     font-size: clamp(30px, 3vw, 40px);
     text-transform: uppercase;
     margin-bottom: 1rem;
-    color: #fdf5e6;
+    color: #401e08;
 }
 .text-section {
     font-size: clamp(10px, 3vw, 20px);
-    color: #fdf5e6;
+    color: #401e08;
 
 }
 
@@ -190,11 +188,13 @@ h1 {
 }
 .flex-2 h2 {
     font-size: clamp(20px, 3vw, 22px);
+    color: #401e08;
     margin-top: 1rem;
     margin-bottom: 2.3rem;
 }
 .flex-2 > a {
     text-transform: uppercase;
+    color: #401e08;
 }
 .footer {
     padding: 5rem;
@@ -226,8 +226,8 @@ h1 {
 }
 .button-footer button {
     font-size: clamp(10px, 3vw, 20px);
-    background-color: #D8A03C;
-    color: white;
+    background-color: #f4e493;
+    color: #401e08;
     padding-block: .8rem;
     padding-inline: 3rem;
     border-radius: 5rem;
@@ -236,7 +236,7 @@ h1 {
 }
 .button-footer button:hover {
     cursor: pointer;
-    background-color: #B8791F;
+    background-color: #efd15a;
     /* box-shadow: 1px 1px 6px white; */
 }
 .img-footer {
@@ -266,10 +266,12 @@ h1 {
 }
 .text-logo {
     font-size: clamp(15px, 3vw, 22px);
+    color: #401e08;
 }
 .title-telefono {
     gap: 2.1rem;
     padding: 1rem;
+    color: #401e08;
 }
 .title-telefono div > a {
     font-size: clamp(15px, 3vw, 20px);
@@ -277,6 +279,7 @@ h1 {
 .title-email {
     gap: 2.1rem;
     padding: 1rem;
+    color: #401e08;
 }
 .title-email div > a {
     font-size: clamp(15px, 3vw, 20px);
@@ -297,22 +300,25 @@ h1 {
     font-size: clamp(15px, 3vw, 17x);
 }
 .social {
-    color: white;
-    background-color: #4E2A14;
+    color: #4E2A14;
+    background-color: #efd15a;
     font-size: 18px;
     width: 45px;
     height: 45px;
     border-radius: 100%;
-    transition: all .4s;
+    transition: all .4s ease-in-out;
 }
 .social-f:hover {
     background-color: #3b5998;
+    color: #fdfbed;
 }
 .social-i:hover {
     background: #C13584;
+    color: #fdfbed;
 }
 .social-w:hover {
     background-color: #25d366;
+    color: #fdfbed;
 }
 
 @media (850px < width < 1012px) {
