--- a/css/css.css
+++ b/css/css.css
@@ -24,7 +24,7 @@ header {
     /* top: 0px; */
     /* position: sticky; */
     /* z-index: 2; */
-    background-color: #f4e493;
+    background-color: #fdfae9;
 }
 h1 {
     color: white;
@@ -59,8 +59,7 @@ h1 {
     flex-direction: row-reverse;
 }
 .navegation ul > li > a {
-    font-size: clamp(16px, 3vw, 17px);
-    text-transform: uppercase;
+    font-size: clamp(15px, 3vw, 16px);
     color: #401e08;
     transition: all .3s ease-in-out;
 }
@@ -82,17 +81,24 @@ h1 {
 }
 
 /*--------------  BANNER -----------------*/
+.banner {
+    height: 600px;
+}
+.banner-img {
+    height: 100%;
+}
 .banner-img img {
     /* background: url(../img/Banner.png) no-repeat; */
     /* background-size: cover; */
     width: 100%;
-    /* height: 58rem; */
+    height: 100%;
+    object-fit: cover;
 }
 
 /*--------------  CATEGORIAS -----------------*/
 .categorias {
     padding-block: 5rem;
-    background-color: #884618;
+    background-color: #f7d54d;
 }
 .item-img img {
     /* height: 100%; */
@@ -302,7 +308,7 @@ h1 {
 .social {
     color: #4E2A14;
     background-color: #efd15a;
-    font-size: 18px;
+    font-size: 19px;
     width: 45px;
     height: 45px;
     border-radius: 100%;
@@ -322,6 +328,24 @@ h1 {
 }
 
 @media (850px < width < 1012px) {
+    /*-------------- CATEGORIAS --------------*/
+    .categorias {
+        padding-block: 3rem;
+    } 
+    .cat-column-2 {
+        grid-template-columns: repeat(1, auto);
+        gap: 1rem;
+    }
+    .item-img img {
+        /* height: 100%; */
+        width: 30rem;
+        height: 100%;
+    }
+    .item-img2 img {
+        width: 30rem;
+        height: 100%;
+    }
+    
     /*-------------- FOOTER --------------*/ 
     .footer-column-2 {
         grid-template-columns: repeat(1, auto);
